Fix text-alignment & padding

--- a/src/components/ListMode/ListMode.scss
+++ b/src/components/ListMode/ListMode.scss
@@ -73,6 +73,8 @@
 
 .lineTitle {
   color: colors.$near-black;
+  width: 100%;
+  padding: 0 5px;
 }
 
 .checkbox {
